bow for nlp processed tweets

--- a/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
@@ -29,24 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "import json\n",
-    "import io\n",
     "import re\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
     "import pandas as pd\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "from tqdm import tnrange, tqdm_notebook, tqdm\n",
-    "\n",
-    "from sklearn import preprocessing\n",
-    "import matplotlib.pyplot as plt"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -136,7 +127,7 @@
    "source": [
     "## Data Cleaning\n",
     "\n",
-    "THe first step when dealing with tweets is to clean the tweet body data. By appliying the 1% reduction to all tweets, we then apply basic regular expression treatment and save the data to CSV."
+    "The first step when dealing with tweets is to clean the tweet body data. By appliying the 1% reduction to all tweets, we then apply basic regular expression treatment and save the data to CSV."
    ],
    "metadata": {
     "collapsed": false,
@@ -173,12 +164,26 @@
     "    text = re.sub('@\\\\w+ *', '', text, flags=re.MULTILINE)\n",
     "    dd.loc[i, 'text'] = text\n",
     "\n",
-    "dd.to_csv('tweets_clean.csv', header=True, encoding='utf-8', index=False)"
+    "dd.to_csv(f'{directory}/data/tweets_clean.csv', header=True, encoding='utf-8', index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### End\n",
+    "\n",
+    "Save to local the data after processing visualization and cleaning. We will start the next steps using the CSV 'tweets_clean.csv'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
