--- a/scratches/bitcoin_price_analysis_kaggle/06_tweets_bow.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/06_tweets_bow.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from datetime import datetime\n",
     "# import stanza\n",
     "from text_mining.text_processing.text2bow import Text2BowTransformerPhrases\n",
     "from text_mining.text_processing.tokenizer import Tokenizer"
@@ -47,59 +48,478 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Current Time = 14:53:15\n",
       "100\n",
+      "Current Time = 14:54:36\n",
       "200\n",
+      "Current Time = 14:56:00\n",
       "300\n",
+      "Current Time = 14:57:20\n",
       "400\n",
+      "Current Time = 14:58:37\n",
       "500\n",
+      "Current Time = 14:59:25\n",
       "600\n",
+      "Current Time = 15:00:11\n",
       "700\n",
+      "Current Time = 15:01:04\n",
       "800\n",
+      "Current Time = 15:01:51\n",
       "900\n",
+      "Current Time = 15:02:37\n",
       "1000\n",
+      "Current Time = 15:03:28\n",
       "1100\n",
+      "Current Time = 15:04:18\n",
       "1200\n",
+      "Current Time = 15:05:07\n",
       "1300\n",
+      "Current Time = 15:06:00\n",
       "1400\n",
+      "Current Time = 15:06:45\n",
       "1500\n",
+      "Current Time = 15:07:33\n",
       "1600\n",
+      "Current Time = 15:08:25\n",
       "1700\n",
+      "Current Time = 15:09:12\n",
       "1800\n",
+      "Current Time = 15:09:58\n",
       "1900\n",
+      "Current Time = 15:10:42\n",
       "2000\n",
+      "Current Time = 15:11:29\n",
       "2100\n",
+      "Current Time = 15:12:20\n",
       "2200\n",
+      "Current Time = 15:13:11\n",
       "2300\n",
+      "Current Time = 15:14:00\n",
       "2400\n",
+      "Current Time = 15:14:49\n",
       "2500\n",
+      "Current Time = 15:15:40\n",
       "2600\n",
+      "Current Time = 15:16:25\n",
       "2700\n",
+      "Current Time = 15:17:11\n",
       "2800\n",
+      "Current Time = 15:18:03\n",
       "2900\n",
+      "Current Time = 15:18:55\n",
       "3000\n",
+      "Current Time = 15:19:42\n",
       "3100\n",
+      "Current Time = 15:20:39\n",
       "3200\n",
+      "Current Time = 15:21:28\n",
       "3300\n",
+      "Current Time = 15:22:14\n",
       "3400\n",
+      "Current Time = 15:22:57\n",
       "3500\n",
+      "Current Time = 15:23:40\n",
       "3600\n",
+      "Current Time = 15:24:24\n",
       "3700\n",
+      "Current Time = 15:25:13\n",
       "3800\n",
+      "Current Time = 15:25:59\n",
       "3900\n",
+      "Current Time = 15:26:46\n",
       "4000\n",
+      "Current Time = 15:27:31\n",
       "4100\n",
+      "Current Time = 15:28:21\n",
       "4200\n",
+      "Current Time = 15:29:07\n",
       "4300\n",
+      "Current Time = 15:29:54\n",
       "4400\n",
+      "Current Time = 15:30:40\n",
       "4500\n",
+      "Current Time = 15:31:28\n",
       "4600\n",
-      "4700\n"
+      "Current Time = 15:32:19\n",
+      "4700\n",
+      "Current Time = 15:33:00\n",
+      "4800\n",
+      "Current Time = 15:33:47\n",
+      "4900\n",
+      "Current Time = 15:34:36\n",
+      "5000\n",
+      "Current Time = 15:35:21\n",
+      "5100\n",
+      "Current Time = 15:36:07\n",
+      "5200\n",
+      "Current Time = 15:36:55\n",
+      "5300\n",
+      "Current Time = 15:37:37\n",
+      "5400\n",
+      "Current Time = 15:38:26\n",
+      "5500\n",
+      "Current Time = 15:39:13\n",
+      "5600\n",
+      "Current Time = 15:39:58\n",
+      "5700\n",
+      "Current Time = 15:40:44\n",
+      "5800\n",
+      "Current Time = 15:41:29\n",
+      "5900\n",
+      "Current Time = 15:42:15\n",
+      "6000\n",
+      "Current Time = 15:43:03\n",
+      "6100\n",
+      "Current Time = 15:43:47\n",
+      "6200\n",
+      "Current Time = 15:44:44\n",
+      "6300\n",
+      "Current Time = 15:45:34\n",
+      "6400\n",
+      "Current Time = 15:46:26\n",
+      "6500\n",
+      "Current Time = 15:47:13\n",
+      "6600\n",
+      "Current Time = 15:48:00\n",
+      "6700\n",
+      "Current Time = 15:48:47\n",
+      "6800\n",
+      "Current Time = 15:49:35\n",
+      "6900\n",
+      "Current Time = 15:50:21\n",
+      "7000\n",
+      "Current Time = 15:51:15\n",
+      "7100\n",
+      "Current Time = 15:52:00\n",
+      "7200\n",
+      "Current Time = 15:52:51\n",
+      "7300\n",
+      "Current Time = 15:53:41\n",
+      "7400\n",
+      "Current Time = 15:54:27\n",
+      "7500\n",
+      "Current Time = 15:55:15\n",
+      "7600\n",
+      "Current Time = 15:56:03\n",
+      "7700\n",
+      "Current Time = 15:56:54\n",
+      "7800\n",
+      "Current Time = 15:57:47\n",
+      "7900\n",
+      "Current Time = 15:58:42\n",
+      "8000\n",
+      "Current Time = 15:59:36\n",
+      "8100\n",
+      "Current Time = 16:00:28\n",
+      "8200\n",
+      "Current Time = 16:01:25\n",
+      "8300\n",
+      "Current Time = 16:02:20\n",
+      "8400\n",
+      "Current Time = 16:03:13\n",
+      "8500\n",
+      "Current Time = 16:03:55\n",
+      "8600\n",
+      "Current Time = 16:04:47\n",
+      "8700\n",
+      "Current Time = 16:05:31\n",
+      "8800\n",
+      "Current Time = 16:06:21\n",
+      "8900\n",
+      "Current Time = 16:07:08\n",
+      "9000\n",
+      "Current Time = 16:07:57\n",
+      "9100\n",
+      "Current Time = 16:08:50\n",
+      "9200\n",
+      "Current Time = 16:09:38\n",
+      "9300\n",
+      "Current Time = 16:10:23\n",
+      "9400\n",
+      "Current Time = 16:11:06\n",
+      "9500\n",
+      "Current Time = 16:11:54\n",
+      "9600\n",
+      "Current Time = 16:12:41\n",
+      "9700\n",
+      "Current Time = 16:13:25\n",
+      "9800\n",
+      "Current Time = 16:14:12\n",
+      "9900\n",
+      "Current Time = 16:15:03\n",
+      "10000\n",
+      "Current Time = 16:15:51\n",
+      "10100\n",
+      "Current Time = 16:16:37\n",
+      "10200\n",
+      "Current Time = 16:17:28\n",
+      "10300\n",
+      "Current Time = 16:18:14\n",
+      "10400\n",
+      "Current Time = 16:19:00\n",
+      "10500\n",
+      "Current Time = 16:19:47\n",
+      "10600\n",
+      "Current Time = 16:20:35\n",
+      "10700\n",
+      "Current Time = 16:21:22\n",
+      "10800\n",
+      "Current Time = 16:22:10\n",
+      "10900\n",
+      "Current Time = 16:23:05\n",
+      "11000\n",
+      "Current Time = 16:23:51\n",
+      "11100\n",
+      "Current Time = 16:24:35\n",
+      "11200\n",
+      "Current Time = 16:25:22\n",
+      "11300\n",
+      "Current Time = 16:26:11\n",
+      "11400\n",
+      "Current Time = 16:27:01\n",
+      "11500\n",
+      "Current Time = 16:27:48\n",
+      "11600\n",
+      "Current Time = 16:28:36\n",
+      "11700\n",
+      "Current Time = 16:29:23\n",
+      "11800\n",
+      "Current Time = 16:30:13\n",
+      "11900\n",
+      "Current Time = 16:31:07\n",
+      "12000\n",
+      "Current Time = 16:31:54\n",
+      "12100\n",
+      "Current Time = 16:32:40\n",
+      "12200\n",
+      "Current Time = 16:33:32\n",
+      "12300\n",
+      "Current Time = 16:34:22\n",
+      "12400\n",
+      "Current Time = 16:35:14\n",
+      "12500\n",
+      "Current Time = 16:36:04\n",
+      "12600\n",
+      "Current Time = 16:36:57\n",
+      "12700\n",
+      "Current Time = 16:37:47\n",
+      "12800\n",
+      "Current Time = 16:38:38\n",
+      "12900\n",
+      "Current Time = 16:39:23\n",
+      "13000\n",
+      "Current Time = 16:40:13\n",
+      "13100\n",
+      "Current Time = 16:40:59\n",
+      "13200\n",
+      "Current Time = 16:41:47\n",
+      "13300\n",
+      "Current Time = 16:42:31\n",
+      "13400\n",
+      "Current Time = 16:43:21\n",
+      "13500\n",
+      "Current Time = 16:44:04\n",
+      "13600\n",
+      "Current Time = 16:44:52\n",
+      "13700\n",
+      "Current Time = 16:45:38\n",
+      "13800\n",
+      "Current Time = 16:46:25\n",
+      "13900\n",
+      "Current Time = 16:47:14\n",
+      "14000\n",
+      "Current Time = 16:47:59\n",
+      "14100\n",
+      "Current Time = 16:48:44\n",
+      "14200\n",
+      "Current Time = 16:49:36\n",
+      "14300\n",
+      "Current Time = 16:50:19\n",
+      "14400\n",
+      "Current Time = 16:51:14\n",
+      "14500\n",
+      "Current Time = 16:52:01\n",
+      "14600\n",
+      "Current Time = 16:52:48\n",
+      "14700\n",
+      "Current Time = 16:53:37\n",
+      "14800\n",
+      "Current Time = 16:54:23\n",
+      "14900\n",
+      "Current Time = 16:55:05\n",
+      "15000\n",
+      "Current Time = 16:55:55\n",
+      "15100\n",
+      "Current Time = 16:56:44\n",
+      "15200\n",
+      "Current Time = 16:57:36\n",
+      "15300\n",
+      "Current Time = 16:58:23\n",
+      "15400\n",
+      "Current Time = 16:59:15\n",
+      "15500\n",
+      "Current Time = 17:00:06\n",
+      "15600\n",
+      "Current Time = 17:00:54\n",
+      "15700\n",
+      "Current Time = 17:01:46\n",
+      "15800\n",
+      "Current Time = 17:02:35\n",
+      "15900\n",
+      "Current Time = 17:03:25\n",
+      "16000\n",
+      "Current Time = 17:04:18\n",
+      "16100\n",
+      "Current Time = 17:04:59\n",
+      "16200\n",
+      "Current Time = 17:05:48\n",
+      "16300\n",
+      "Current Time = 17:06:38\n",
+      "16400\n",
+      "Current Time = 17:07:22\n",
+      "16500\n",
+      "Current Time = 17:08:10\n",
+      "16600\n",
+      "Current Time = 17:09:00\n",
+      "16700\n",
+      "Current Time = 17:09:47\n",
+      "16800\n",
+      "Current Time = 17:10:39\n",
+      "16900\n",
+      "Current Time = 17:11:35\n",
+      "17000\n",
+      "Current Time = 17:12:24\n",
+      "17100\n",
+      "Current Time = 17:13:18\n",
+      "17200\n",
+      "Current Time = 17:14:01\n",
+      "17300\n",
+      "Current Time = 17:14:51\n",
+      "17400\n",
+      "Current Time = 17:15:36\n",
+      "17500\n",
+      "Current Time = 17:16:30\n",
+      "17600\n",
+      "Current Time = 17:17:17\n",
+      "17700\n",
+      "Current Time = 17:18:01\n",
+      "17800\n",
+      "Current Time = 17:18:52\n",
+      "17900\n",
+      "Current Time = 17:19:38\n",
+      "18000\n",
+      "Current Time = 17:20:28\n",
+      "18100\n",
+      "Current Time = 17:21:15\n",
+      "18200\n",
+      "Current Time = 17:22:02\n",
+      "18300\n",
+      "Current Time = 17:22:45\n",
+      "18400\n",
+      "Current Time = 17:23:32\n",
+      "18500\n",
+      "Current Time = 17:24:20\n",
+      "18600\n",
+      "Current Time = 17:25:05\n",
+      "18700\n",
+      "Current Time = 17:25:51\n",
+      "18800\n",
+      "Current Time = 17:26:42\n",
+      "18900\n",
+      "Current Time = 17:27:30\n",
+      "19000\n",
+      "Current Time = 17:28:15\n",
+      "19100\n",
+      "Current Time = 17:29:06\n",
+      "19200\n",
+      "Current Time = 17:29:57\n",
+      "19300\n",
+      "Current Time = 17:30:43\n",
+      "19400\n",
+      "Current Time = 17:31:24\n",
+      "19500\n",
+      "Current Time = 17:32:14\n",
+      "19600\n",
+      "Current Time = 17:32:58\n",
+      "19700\n",
+      "Current Time = 17:33:48\n",
+      "19800\n",
+      "Current Time = 17:34:35\n",
+      "19900\n",
+      "Current Time = 17:35:23\n",
+      "20000\n",
+      "Current Time = 17:36:10\n",
+      "20100\n",
+      "Current Time = 17:36:57\n",
+      "20200\n",
+      "Current Time = 17:37:43\n",
+      "20300\n",
+      "Current Time = 17:38:30\n",
+      "20400\n",
+      "Current Time = 17:39:20\n",
+      "20500\n",
+      "Current Time = 17:40:06\n",
+      "20600\n",
+      "Current Time = 17:40:51\n",
+      "20700\n",
+      "Current Time = 17:41:32\n",
+      "20800\n",
+      "Current Time = 17:42:20\n",
+      "20900\n",
+      "Current Time = 17:43:10\n",
+      "21000\n",
+      "Current Time = 17:43:52\n",
+      "21100\n",
+      "Current Time = 17:44:40\n",
+      "21200\n",
+      "Current Time = 17:45:26\n",
+      "21300\n",
+      "Current Time = 17:46:16\n",
+      "21400\n",
+      "Current Time = 17:47:02\n",
+      "21500\n",
+      "Current Time = 17:47:51\n",
+      "21600\n",
+      "Current Time = 17:48:35\n",
+      "21700\n",
+      "Current Time = 17:49:22\n",
+      "21800\n",
+      "Current Time = 17:50:10\n",
+      "21900\n",
+      "Current Time = 17:51:00\n",
+      "22000\n",
+      "Current Time = 17:51:47\n",
+      "22100\n",
+      "Current Time = 17:52:34\n",
+      "22200\n",
+      "Current Time = 17:53:21\n",
+      "22300\n",
+      "Current Time = 17:54:09\n",
+      "22400\n",
+      "Current Time = 17:55:01\n",
+      "22500\n",
+      "Current Time = 17:55:49\n",
+      "22600\n",
+      "Current Time = 17:56:37\n",
+      "22700\n",
+      "Current Time = 17:57:27\n",
+      "22800\n",
+      "Current Time = 17:58:15\n",
+      "22900\n",
+      "Current Time = 17:59:02\n",
+      "23000\n",
+      "Current Time = 17:59:52\n",
+      "23100\n",
+      "Current Time = 18:00:35\n",
+      "23200\n",
+      "Current Time = 18:01:24\n",
+      "23300\n"
      ]
     }
    ],
@@ -114,20 +534,39 @@
     "    results.append(text2bow.fit_transform(str(row.cleaned_tweets)))\n",
     "    count +=1\n",
     "    if count % 100 == 0:\n",
+    "        now = datetime.now()\n",
+    "        current_time = now.strftime(\"%H:%M:%S\")\n",
+    "        print(\"Current Time =\", current_time)\n",
     "        print(count)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(23317, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "                                                       tweets  \\\ndate_clean                                                      \n2021-10-28  Airdrop is live , dont be late sir :)\\n\\n\\n\\n\\...   \n2021-10-22  something Big is coming \\n$KLV Klever 💜🌟\\n\\nBT...   \n2021-08-16  Easy money with \\n\\n bsc bnb BinanceSmartChain...   \n2021-10-19  NanoDogecoin is the King👑of the BSC Blockchain...   \n2021-12-30  Bitcoin News Roundup for June 17, 2020 cryptoc...   \n\n                                               cleaned_tweets  \\\ndate_clean                                                      \n2021-10-28  Airdrop live dont late sir Airdrop Airdrops Ai...   \n2021-10-22  something Big coming KLV Klever BTC ETH BNB TR...   \n2021-08-16  Easy money bsc bnb BinanceSmartChain binance g...   \n2021-10-19  NanoDogecoin King BSC Blockchain DeFi altcoins...   \n2021-12-30  Bitcoin News Roundup June cryptocurrencies bit...   \n\n           crypto_sentiment  subjectivity  polarity sentiment  target  \\\ndate_clean                                                              \n2021-10-28         negative      0.550000 -0.081818  negative    True   \n2021-10-22         negative      0.100000  0.000000  positive   False   \n2021-08-16         negative      0.833333  0.433333   neutral   False   \n2021-10-19         negative      0.733333  0.433333   neutral   False   \n2021-12-30         positive      0.000000  0.000000  positive    True   \n\n                                                          bow  \ndate_clean                                                     \n2021-10-28  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-10-22  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-08-16  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-10-19  [[(0, 1)], [], [(0, 1)], [(1, 1)], [], [(1, 1)...  \n2021-12-30  [[], [], [], [], [], [], [], [], [], [], [], [...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweets</th>\n      <th>cleaned_tweets</th>\n      <th>crypto_sentiment</th>\n      <th>subjectivity</th>\n      <th>polarity</th>\n      <th>sentiment</th>\n      <th>target</th>\n      <th>bow</th>\n    </tr>\n    <tr>\n      <th>date_clean</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-10-28</th>\n      <td>Airdrop is live , dont be late sir :)\\n\\n\\n\\n\\...</td>\n      <td>Airdrop live dont late sir Airdrop Airdrops Ai...</td>\n      <td>negative</td>\n      <td>0.550000</td>\n      <td>-0.081818</td>\n      <td>negative</td>\n      <td>True</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-10-22</th>\n      <td>something Big is coming \\n$KLV Klever 💜🌟\\n\\nBT...</td>\n      <td>something Big coming KLV Klever BTC ETH BNB TR...</td>\n      <td>negative</td>\n      <td>0.100000</td>\n      <td>0.000000</td>\n      <td>positive</td>\n      <td>False</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-08-16</th>\n      <td>Easy money with \\n\\n bsc bnb BinanceSmartChain...</td>\n      <td>Easy money bsc bnb BinanceSmartChain binance g...</td>\n      <td>negative</td>\n      <td>0.833333</td>\n      <td>0.433333</td>\n      <td>neutral</td>\n      <td>False</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-10-19</th>\n      <td>NanoDogecoin is the King👑of the BSC Blockchain...</td>\n      <td>NanoDogecoin King BSC Blockchain DeFi altcoins...</td>\n      <td>negative</td>\n      <td>0.733333</td>\n      <td>0.433333</td>\n      <td>neutral</td>\n      <td>False</td>\n      <td>[[(0, 1)], [], [(0, 1)], [(1, 1)], [], [(1, 1)...</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>Bitcoin News Roundup for June 17, 2020 cryptoc...</td>\n      <td>Bitcoin News Roundup June cryptocurrencies bit...</td>\n      <td>positive</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>positive</td>\n      <td>True</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['bow'] = results\n",
     "print(df.shape)\n",
@@ -136,14 +575,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "df.to_csv(f'{directory}/data/tweets_nlp_bow.csv')"
@@ -151,8 +589,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
