--- a/scratches/bitcoin_price_analysis_kaggle/04_processing_data_MSC.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/04_processing_data_MSC.ipynb
@@ -313,10 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "outputs": [],
    "source": [
-    "pd.DataFrame(df_matrix).to_csv('tweets_words_matrix.csv')"
+    "pd.DataFrame(df_matrix).to_csv(f'{directory}/data/tweets_words_matrix.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -327,67 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
       "text/plain": "(1585556, 61)"
      },
-     "execution_count": 74,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_matrix.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "utime() missing required argument 'path' (pos 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [76]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m10\u001B[39m):\n\u001B[0;32m----> 4\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mutime\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "\u001B[0;31mTypeError\u001B[0m: utime() missing required argument 'path' (pos 1)"
-     ]
-    }
-   ],
-   "source": [
-    "import datetime\n",
-    "\n",
-    "for i in range(10):\n",
-    "    print(datetime.date.now())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "now = datetime.now()\n",
-    "\n",
-    "current_time = now.strftime(\"%H:%M:%S\")\n",
-    "print(\"Current Time =\", current_time)"
    ],
    "metadata": {
     "collapsed": false,
