bow for nlp processed tweets

--- a/scratches/bitcoin_price_analysis_kaggle/04_processing_data_MSC.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/04_processing_data_MSC.ipynb
@@ -9,18 +9,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import nltk\n",
-    "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
-    "import string\n",
-    "from itertools import chain\n",
-    "from collections import Counter\n",
-    "from wordcloud import WordCloud, STOPWORDS, ImageColorGenerator"
+    "from collections import Counter"
    ]
   },
   {
