bow for nlp processed tweets

--- a/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
@@ -203,7 +203,9 @@
     "\n",
     "    try:\n",
     "    # Scores are calculated using the relevance of the tweeter poster\n",
-    "        scores.append(s[\"compound\"] * (int(s[\"user_followers\"])+1) * (int(s[\"user_favourites\"])+1) * 10)\n",
+    "    # Divide by 1000 to scale the scores\n",
+    "    # Divide by mean...\n",
+    "        scores.append(s[\"compound\"] * (int(s[\"user_followers\"])+1) / 1000)\n",
     "\n",
     "    except:\n",
     "        scores.append(np.nan)\n",
