--- a/code/bitcoin/07_topic_analysis.ipynb
+++ b/code/bitcoin/07_topic_analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "store_path = '/Users/hpp/PycharmProjects/tfm_hugopobil/data/sampled_data'\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -77,7 +77,7 @@
       "text/plain": "   date_clean                                             tweets  \\\n0  2021-02-06  \"Will Institutional Investment Keep Pouring In...   \n1  2021-02-06  BTC Bitcoin  You know where the WSB money is g...   \n2  2021-02-06  🔼🔼 ₿1 = $38,868 (00:56 UTC)\\n$BTC prices conti...   \n3  2021-02-06    BTC Bitcoin All the way up! 🚀 🚀 💵 💵 /xVyLbbWRiu   \n4  2021-02-06                             Keep going BTC bitcoin   \n\n                                      cleaned_tweets crypto_sentiment  \\\n0  Will Institutional Investment Keep Pouring Int...         positive   \n1  BTC Bitcoin You know WSB money going WallStree...         positive   \n2  UTC BTC price continue rise Change since midni...         positive   \n3                     BTC Bitcoin All way xVyLbbWRiu         positive   \n4                             Keep going BTC bitcoin         positive   \n\n   subjectivity  polarity sentiment  target  \n0           0.0       0.0  positive    True  \n1           0.0       0.0  positive    True  \n2           0.0       0.0  positive    True  \n3           0.0       0.0  positive    True  \n4           0.0       0.0  positive    True  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date_clean</th>\n      <th>tweets</th>\n      <th>cleaned_tweets</th>\n      <th>crypto_sentiment</th>\n      <th>subjectivity</th>\n      <th>polarity</th>\n      <th>sentiment</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2021-02-06</td>\n      <td>\"Will Institutional Investment Keep Pouring In...</td>\n      <td>Will Institutional Investment Keep Pouring Int...</td>\n      <td>positive</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>positive</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2021-02-06</td>\n      <td>BTC Bitcoin  You know where the WSB money is g...</td>\n      <td>BTC Bitcoin You know WSB money going WallStree...</td>\n      <td>positive</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>positive</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2021-02-06</td>\n      <td>🔼🔼 ₿1 = $38,868 (00:56 UTC)\\n$BTC prices conti...</td>\n      <td>UTC BTC price continue rise Change since midni...</td>\n      <td>positive</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>positive</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2021-02-06</td>\n      <td>BTC Bitcoin All the way up! 🚀 🚀 💵 💵 /xVyLbbWRiu</td>\n      <td>BTC Bitcoin All way xVyLbbWRiu</td>\n      <td>positive</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>positive</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2021-02-06</td>\n      <td>Keep going BTC bitcoin</td>\n      <td>Keep going BTC bitcoin</td>\n      <td>positive</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>positive</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "0        [institutional, investment, keep, pouring, ehs...\n1        [know, wsb, money, going, wallstreetbets, gme,...\n2        [utc, price, continue, rise, change, since, mi...\n3                                        [way, xvylbbwriu]\n4                                            [keep, going]\n                               ...                        \n20560    [let, honest, watching, video, please, tell, b...\n20561    [got, hashing, alot, onboard, super, excited, ...\n20562              [surprise, people, willing, spend, nft]\n20563    [bnb, dumped, current, price, want, buy, dip, ...\n20564    [first, giveaway, nft, dogedash, subscriber, f...\nName: tokens, Length: 20565, dtype: object"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "[('crypto', 5836),\n ('cryptocurrency', 3401),\n ('eth', 3154),\n ('ethereum', 2330),\n ('price', 2078),\n ('binance', 1845),\n ('bnb', 1748),\n ('blockchain', 1741),\n ('project', 1724),\n ('bsc', 1562),\n ('airdrop', 1312),\n ('doge', 1236),\n ('buy', 1235),\n ('nft', 1031),\n ('xrp', 1006),\n ('defi', 992),\n ('get', 976),\n ('market', 942),\n ('new', 909),\n ('trading', 905)]"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.5 s, sys: 2.11 s, total: 6.61 s\n",
+      "Wall time: 7.73 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "X = bow_tweets(tweets['tokens'], dictionary)\n",
@@ -228,8 +237,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "bob_df = pd.DataFrame((list(map(str, bob))), columns=['biterms']).groupby(['biterms']).size().reset_index(name='counts').sort_values('counts', ascending=0)\n",
-    "bob_df['biterm_text'] = bob_df['biterms'].apply(lambda x: x.strip(' []').split(' '))"
+    "# bob_df = pd.DataFrame((list(map(str, bob))), columns=['biterms']).groupby(['biterms']).size().reset_index(name='counts').sort_values('counts', ascending=0)\n",
+    "# bob_df['biterm_text'] = bob_df['biterms'].apply(lambda x: x.strip(' []').split(' '))"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,9 +252,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "bob_df['biterm_text'] = bob_df['biterm_text'].apply(lambda x: f'{dictionary[int(x[0])]},{dictionary[int(x[1])]}')\n",
-    "ax =  bob_df[0:40].plot.bar(x='biterm_text' ,y='counts', figsize=(10,5))\n",
-    "plt.show()"
+    "# bob_df['biterm_text'] = bob_df['biterm_text'].apply(lambda x: f'{dictionary[int(x[0])]},{dictionary[int(x[1])]}')\n",
+    "# ax =  bob_df[0:40].plot.bar(x='biterm_text' ,y='counts', figsize=(10,5))\n",
+    "# plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "n_topics = 20"
@@ -282,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "name_tmpl = 'btm_em_tfm'\n",
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "btm = joblib.load(model_map_fn[n_topics])"
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "tweets = tweets.reset_index()"
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
