--- a/models/net_model_2.ipynb
+++ b/models/net_model_2.ipynb
@@ -299,10 +299,6 @@
     "max_len=50\n",
     "\n",
     "def tokenize_pad_sequences(text):\n",
-    "    '''\n",
-    "    This function tokenize the input text into sequnences of intergers and then\n",
-    "    pad each sequence to the same length\n",
-    "    '''\n",
     "    # Text tokenization\n",
     "    tokenizer = Tokenizer(num_words=max_words, lower=True, split=' ')\n",
     "    tokenizer.fit_on_texts(text)\n",
@@ -479,7 +475,8 @@
   {
    "cell_type": "code",
    "source": [
-    "history = model.fit(X_train, y_train, validation_data=(X_test, y_test), \n",
+    "# Utilizar validation set para entrenar\n",
+    "history = model.fit(X_train, y_train, validation_data=(X_test, y_test),\n",
     "                          epochs=epochs, batch_size=batch_size, verbose=2)"
    ],
    "metadata": {
